Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10805

fixes for 4.15 kernel

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • None
    • None
    • 3
    • 9223372036854775807

      This ticket is for collection of changes in lustre required for linux 4.15.

      The first issue seen is the disappearance of the kernel API setup_timer().  It has been replaced by the new timer_setup() call in linux 4.15.   Leads to build fails in all our code using setup_timer().

       

            simmonsja James A Simmons
            bogl Bob Glossman (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: